--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -121,12 +121,12 @@
 {% block foot %}
 
     <!-- Plugin JavaScript -->
-    <script src="{% static "libs/jquery/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "libs/jquery-easing/jquery.easing.min.js" %}"></script>
-    <script src="{% static "libs/scrollreveal/scrollreveal.min.js" %}"></script>
-    <script src="{% static "libs/magnific-popup/jquery.magnific-popup.min.js" %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/libs/jquery-easing/jquery.easing.min.js" %}"></script>
+    <script src="{% static "js/libs/scrollreveal/scrollreveal.min.js" %}"></script>
+    <script src="{% static "js/libs/magnific-popup/jquery.magnific-popup.min.js" %}"></script>
+    <script src="{% static "js/libs/chart/Chart-2.7.2.js" %}"></script>
     <script src="{% static "js/views/donut-chart.js" %}"></script>
     <script src="{% static "js/views/generate-donut-chart.js" %}"></script>
 
