--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -72,8 +72,8 @@
 {% block foot %}
 
     <!-- Plugin JavaScript -->
-    <script src="{% static "libs/jquery/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
 
     {% grunt_module "map_view" %}
 
