--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -47,6 +47,9 @@
             <div class="row side-panel">
                 <div class="col-lg-6" id="content-panel"></div>
             </div>
+            <div class="row side-panel panel-loading">
+                <img src="{% static "img/small-loading.svg" %}" alt="Loading view">
+            </div>
             <div class="row side-panel panel-icons">
             </div>
         </div>
