Create backbone view for control panel

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -21,21 +21,6 @@
 
     <script type='text/html' id='map-template'>
         <div id="map" class="map"></div>
-        <div class="map-control-panel">
-            <div class="search-control sub-control-panel">
-                <i class="fa fa-search" aria-hidden="true"></i>
-            </div>
-            <div class="layer-control sub-control-panel">
-                <i class="fa fa-map" aria-hidden="true"></i>
-            </div>
-            <div class="location-control sub-control-panel">
-                <i class="fa fa-info" aria-hidden="true"></i>
-            </div>
-        </div>
-        <div class="zoom-control row">
-            <div class="col-lg-6 sub-zoom-control zoom-out"><i class="fa fa-plus" aria-hidden="true"></i></div>
-            <div class="col-lg-6 sub-zoom-control zoom-in"><i class="fa fa-minus" aria-hidden="true"></i></div>
-        </div>
     </script>
 
     <script type='text/html' id='side-panel-template'>
@@ -52,6 +37,24 @@
             </div>
             <div class="row side-panel panel-icons">
             </div>
+        </div>
+    </script>
+
+    <script type="text/html" id="map-control-panel">
+        <div class="map-control-panel">
+            <div class="search-control sub-control-panel">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+            <div class="filter-control sub-control-panel">
+                <i class="fa fa-map" aria-hidden="true"></i>
+            </div>
+            <div class="location-control sub-control-panel">
+                <i class="fa fa-info" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="zoom-control row">
+            <div class="col-lg-6 sub-zoom-control zoom-out"><i class="fa fa-plus" aria-hidden="true"></i></div>
+            <div class="col-lg-6 sub-zoom-control zoom-in"><i class="fa fa-minus" aria-hidden="true"></i></div>
         </div>
     </script>
 
