--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -12,6 +12,10 @@
     <link href="{% static "css/map.css" %}" rel="stylesheet">
     <link href="{% static "css/loading.css" %}" rel="stylesheet">
 
+    <link href="{% static "js/libs/ol-layerswitcher/ol3-layerswitcher.css" %}" rel="stylesheet">
+    <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
+    <script src="{% static "js/libs/ol-layerswitcher/ol-layerswitcher.js" %}"></script>
+
     <script type="text/javascript">
         const bingMapKey = '{{ bing_map_key }}';
         const geocontextUrl = '{{ geocontext_url }}';
@@ -34,7 +38,7 @@
             <div class="right-panel-title">
                 <i class="fa fa-map-marker"></i> <span class="site-name"> Site #number </span>
                 <i class="fa fa-times close-panel"></i>
-           </div>
+            </div>
             <div class="row side-panel">
                 <div class="col-lg-6" id="content-panel"></div>
             </div>
@@ -79,7 +83,7 @@
                 <div class="search-box">
                     <div class="container-1">
                         <span class="icon"><i class="fa fa-search"></i></span>
-                        <input type="search" id="search" placeholder="Search..." />
+                        <input type="search" id="search" placeholder="Search..."/>
                     </div>
                 </div>
             </div>
