remove captcha when site key is not there

--- a/bims/templates/includes/captcha.html
+++ b/bims/templates/includes/captcha.html
@@ -1,11 +1,20 @@
 <div id="captcha-info"><span id="warning-captcha">Please verify that you are not a bot first.</span><br/></div>
 <div class="g-recaptcha" data-callback="enableBtn"></div>
 
-<script src="https://www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit&hl=en"></script>
+{% if site_key != '' %}
+    <script src="https://www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit&hl=en"></script>
+ {% else %}
+    <script>
+        $(document).ready(function () {
+            enableBtn();
+        })
+    </script>
+{% endif %}
+
 <script type="text/javascript">
     var CaptchaCallback = function(){
       $('.g-recaptcha').each(function(){
-        grecaptcha.render(this,{'sitekey' : '6LfuEF0UAAAAAPfKni-Wm7i95P3pxHMPINfGW64a'} );
+        grecaptcha.render(this,{'sitekey' : '{{ site_key }}' } );
       })
     };
 
