--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -11,9 +11,15 @@
     <!-- Custom styles for this template -->
     <link href="{% static "css/map.css" %}" rel="stylesheet">
     <link href="{% static "css/loading.css" %}" rel="stylesheet">
+    <link href="{% static "js/libs/ol-layerswitcher/ol3-layerswitcher.css" %}" rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.2/ol.js"></script>
+    <script src="{% static "js/libs/ol-mapbox-style/olms.js" %}"></script>
 
     <script type="text/javascript">
         const bingMapKey = '{{ bing_map_key }}';
+        const mapTilerKey = '{{ map_tiler_key }}';
+        const staticURL = "{% static "" %}";
         const geocontextUrl = '{{ geocontext_url }}';
     </script>
 {% endblock %}
@@ -34,7 +40,7 @@
             <div class="right-panel-title">
                 <i class="fa fa-map-marker"></i> <span class="site-name"> Site #number </span>
                 <i class="fa fa-times close-panel"></i>
-           </div>
+            </div>
             <div class="row side-panel">
                 <div class="col-lg-6" id="content-panel"></div>
             </div>
@@ -79,7 +85,7 @@
                 <div class="search-box">
                     <div class="container-1">
                         <span class="icon"><i class="fa fa-search"></i></span>
-                        <input type="search" id="search" placeholder="Search..." />
+                        <input type="search" id="search" placeholder="Search..."/>
                     </div>
                 </div>
             </div>
