--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -362,3 +362,38 @@ html, body, .map, .map-wrapper, #map-container {
 .layer-switcher input {
     cursor: pointer;
 }
+
+.result-search {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 5px;
+}
+
+#search-results-wrapper {
+    height: 200px;
+    overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+    display: none;
+}
+
+div:hover::-webkit-scrollbar {
+    display: block;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: white;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.8);
+}
