--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="row">
-                <div id="search-results" class="container-1" style="word-break: break-all"></div>
+                <div id="search-results-wrapper" class="container-1"></div>
             </div>
         </div>
     </script>
@@ -113,22 +113,25 @@
     <script>
         function search() {
             var original_species_name = $('#search').val();
-            $.ajax({
-                type: 'GET',
-                url: '/api/search/' + original_species_name + '/',
-                success: function (data) {
-                    $('#search-results').html('');
-                    console.log(data)
-                    if(data['results']){
-                        $('#search-results').html(data['results'])
-                    }else {
-                        $('#search-results').append('' +
-                            '<p><span>Original species name: ' + data['original_species_name'] + '</span><br/>' +
-                            '<span>Collector: ' + data['collector'] + '</span><br/>' +
-                            '<apanp>Collection Date: ' + data['collection_date'] + '</span></p>')
+            $('#search-results-wrapper').html('');
+            if(original_species_name !== '') {
+                $.ajax({
+                    type: 'GET',
+                    url: '/api/search/' + original_species_name + '/',
+                    success: function (data) {
+                        if (data['results']) {
+                            $('#search-results-wrapper').html(data['results'])
+                        } else {
+                            $.each(data, function (key, value) {
+                                $('#search-results-wrapper').append('' +
+                                    '<p class="result-search"><span>Original species name: ' + value['original_species_name'] + '</span><br/>' +
+                                    '<span>Collector: ' + value['collector'] + '</span><br/>' +
+                                    '<apanp>Collection Date: ' + value['collection_date'] + '</span></p>')
+                            });
+                        }
                     }
-                }
-            })
+                })
+            }
         }
     </script>
 
