--- a/bims/templates/activate_user.html
+++ b/bims/templates/activate_user.html
@@ -6,18 +6,51 @@
 {% endblock %}
 
 {% block body_content %}
-    <div class="container" style="text-align: center;">
-        <h2 style="margin-top: 50px">Welcome!</h2><br/>
+    <style>
+        .block-container {
+            text-align: center;
+            width: 500px;
+            margin: 0 auto;
+            border: 1px solid grey;
+            margin-top: 50px;
+            padding: 20px;
+            border-radius: 3px;
+            background: #f7f7f7;
+        }
+        .btn-login {
+            background-color: white;
+            border-radius: 0;
+            margin: 10px;
+            font-weight: normal;
+            color: #436461;
+            padding: 0 30px;
+            border: 2px solid #436461;
+            font-size: 16pt;
+        }
+
+        .btn-login:hover {
+            background-color: #436461;
+            color: white;
+            border: 2px solid #436461;
+        }
+    </style>
+
+    <div class="container block-container">
+        <h2>Welcome!</h2><br/>
         <h5 style="margin-bottom: 10px">Please enter new password to activate your account.</h5>
-        <form id="new_password_form" action="." method="POST">
-            {% csrf_token %}
-            <label for="password1">New Password: </label>
-            <input name="password1" type="text"><br/>
-            <label for="password2">Confirm Password: </label>
-            <input name="password2" type="text"><br/>
-            <p id="error" style="color: red; font-weight: bold"></p>
-            <input class="btn btn-primary" type="submit" value="Submit"/>
-        </form>
+        <div class="container">
+            <form id="new_password_form" action="." method="POST">
+                {% csrf_token %}
+                <div style="text-align: left; margin: 0 auto; width: 350px">
+                    <label for="password1">New Password: </label>
+                    <input name="password1" type="text" class="pull-right"><br/>
+                    <label for="password2">Confirm Password: </label>
+                    <input name="password2" type="text" class="pull-right"><br/>
+                    <p id="error" style="color: red; font-weight: bold"></p>
+                </div>
+                <input class="btn btn-primary btn-login" type="submit" value="Submit"/>
+            </form>
+        </div>
     </div>
 {% endblock %}
 
