--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -30,6 +30,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/">Menu 1</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/login/">Menu 2</a></li>
+                        <li><a class="nav-link js-scroll-trigger" href="{% url 'link_list' %}">Links</a></li>
                     </ul>
             </li>
           </ul>
