add contact us email

--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -110,7 +110,7 @@
             </div>
             <div class="col-lg-2 pull-right about-links">
                 <p><a>About</a></p>
-                <p><a>Contact</a></p>
+                <p><a href="/contact/" style="text-decoration: none; color: white">Contact</a></p>
                 <p><a>Others</a></p>
             </div>
         </div>
