Update side panel

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -5,11 +5,11 @@
 }
 
 #content-panel {
-    margin: 20px 10px 10px 40px;
+    margin: 15px 10px 10px 15px;
     font-size: 8pt;
     font-weight: normal;
-    border: 1px solid #e0d441;
-    padding: 15px;
+    padding: 15px 30px 15px 15px;
+    word-wrap: break-word;
 }
 
 #content-panel p, .side-panel p {
@@ -59,18 +59,23 @@ html, body, .map, .map-wrapper, #map-container {
     position: absolute;
     height: 100%;
     width: 27.5%;
-    background: rgba(0, 0, 0, 0.6);
-    color: white;
+    max-width: 400px;
+    background: rgba(255, 255, 255, 1);
+    color: #4e4e4e;
     z-index: 2000;
+    -webkit-box-shadow: 3px 3px 5px 6px rgba(0, 0, 0, 0.3);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow:    3px 3px 5px 6px rgba(0, 0, 0, 0.3);  /* Firefox 3.5 - 3.6 */
+    box-shadow:         3px 3px 5px 6px rgba(0, 0, 0, 0.3);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+
 }
 
 .right-panel-title {
     font-size: 20pt;
-    padding-top: 12px;
+    padding-top: 15px;
     padding-bottom: 5px;
     padding-left: 50px;
     height: 80px;
-    background: rgba(0, 0, 0, 0.40);
+    background: rgba(104, 104, 104, 0.4);
 }
 
 .close-panel {
