--- a/td_biblio/templates/_layouts/base.html
+++ b/td_biblio/templates/_layouts/base.html
@@ -6,27 +6,67 @@
 {% endblock %}
 
 {% block head %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <!-- Milligram CSS minified -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+    <!-- Override styles -->
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
+
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/landing_page.css" %}" rel="stylesheet" xmlns="http://www.w3.org/1999/html">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,500,500i,700,700i|Roboto+Condensed:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 {% endblock %}
 
 {% block body_content %}
-    {% block content %}
 
 
+  <title>TailorDev Biblio - {% block page_title %}{% endblock %}</title>
 
+
+  <body class="{% block page_class %}demo{% endblock page_class %}">
+    {% block body %}
+    <header id="page-header">
+      <h1>
+        <a href="{% url 'td_biblio:entry_list' %}">
+          TailorDev Biblio
+        </a>
+        <span>
+          // a Django app to manage your references.
+        </span>
+      </h1>
+    </header>
+
+    {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+        {{ message }}
+      </li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+
+    <div role="main">
+      {% block content %}{% endblock content %}
+    </div>
+
+    <footer id="page-footer">
+      Brought to you by <a href="https://tailordev.fr">TailorDev</a> &mdash;
+      Licensed under the MIT License.
+    </footer>
+
+    {% block javascripts %}{% endblock javascripts %}
     {% endblock %}
+  </body>
+
 {% endblock %}
 
 {% block foot %}
@@ -44,3 +84,4 @@
     <!-- Custom scripts for this template -->
     <script src="{% static "js/creative.js" %}"></script>
 {% endblock %}
+
