--- a/td_biblio/templates/td_biblio/entry_list.html
+++ b/td_biblio/templates/td_biblio/entry_list.html
@@ -1,4 +1,5 @@
 {% extends "td_biblio/layouts/two_cols_left_sidebar.html" %}
+{% load static from staticfiles %}
 {% load i18n %}
 
 {% block page_title %}{% trans "Publications" %}{% endblock page_title %}
@@ -10,6 +11,14 @@
 <h3>{% trans "Metrics" %}</h3>
 
 <div id="publications-stats">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <!-- Milligram CSS minified -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+    <!-- Override styles -->
+
     <table>
         <tr class="metric">
             <td>{% trans "Publications" %}</td>
