--- a/td_biblio/templates/td_biblio/layouts/three_cols.html
+++ b/td_biblio/templates/td_biblio/layouts/three_cols.html
@@ -1,8 +1,9 @@
 {% extends "_layouts/base.html" %}
 
-{% load static %}
+{% load static from staticfiles %}
 
 {% block content %}
+
 <div id="content-wrapper">
     <div id="left-sidebar" class="{% block left_sidebar_class %}{% endblock left_sidebar_class %}">
         {% block left_sidebar_extras %}{% endblock left_sidebar_extras %}
