--- a/td_biblio/templates/td_biblio/entry_list.html
+++ b/td_biblio/templates/td_biblio/entry_list.html
@@ -18,7 +18,11 @@
     <!-- Milligram CSS minified -->
     <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
     <!-- Override styles -->
-
+    <style>
+             body {
+                   margin-top: 8%;
+             }
+        </style>
     <table>
         <tr class="metric">
             <td>{% trans "Publications" %}</td>
